# tv-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DOCUMENTATION_UPDATE_REPORT.md  Dockerfile  ENHANCED_GENERATOR_IMPLEMENTATION.md  ENHANCED_IMPLEMENTATION_COMPLETE.md  FINAL_CLEANUP_AND_OPTIMIZATION_REPORT.md  FINAL_RUN_REPORT.md  FINAL_SPEC_ANALYSIS_REPORT.md  FINAL_VERIFICATION_REPORT.md  IMPROVEMENT_REPORT.md  Makefile  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE_OPTIMIZATION_REPORT.md  README.md  README.tests.md  RELEASE_v2.0.0.md  TODO.md  advanced_openapi_generator.py  analyze_scan.py  audit-log.md  check.py  check3.py  check_fields.py  codex_actions.py  conftest.py  coverage.xml  demo_enhanced_generator.py  demo_enhanced_system.py  endpoint.py  enhanced_generator.py  env.example  field_type_mapping.json  generate_openapi.py  generate_openapi_crypto.py  generate_openapi_from_metainfo.py  generator.py  (+16 more)
.github/workflows/: ci.yml  daily-specs.yml  docker.yml  enhanced-generator.yml  generate-specs.yaml  generate-specs.yml  openapi-pr.yml  spec-update.yml  validate-specs.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  (+236 more)
.venv_new/: pyvenv.cfg
.venv_new/Scripts/: activate  activate.bat
codex_actions/: __init__.py  pyproject.toml
data/: markets.json  supported_markets.json
data/metainfo/: russia.json
data/scan/: russia.json
docs/: README.md  SONARLINT_TROUBLESHOOTING.md
docs/api/: README.md
docs/source/: conf.py  index.rst  modules.rst
docs/specs/: america_openapi.json  bond_openapi.json  bonds_openapi.json  cfd_openapi.json  coin_openapi.json  crypto_dex_openapi.json  crypto_openapi.json  economics2_openapi.json  forex_openapi.json  futures_openapi.json  global_stocks_openapi.json  ireland_openapi.json  options_openapi.json  russia_openapi.json  us_etf_openapi.json  us_stocks_openapi.json
docs/user_guide/: README.md
legacy/: FINAL_REPORT.md  README_ENHANCED.md  requirements-enhanced.txt
results/crypto/: field_status.tsv  metainfo.json
results/forex/: metainfo.json
results/futures/: field_status.tsv
scripts/: cleanup.py  docs.py  project_cleanup.py  publish_pages.py  setup_dev_environment.py  tv_generator_cli.py  unified_market_processor.py
scripts/maintenance/: generate_specs.py  optimize_structure.py
scripts/utils/: openapi_updater.py  validation_and_ci.py
specs/: america.yaml  bond.yaml  bond_openapi.json  cfd.yaml  cfd_openapi.json  coin.yaml  crypto.yaml  crypto_dex_openapi.json  forex.yaml  futures.yaml  openapi_crypto.yaml  openapi_forex.yaml  openapi_futures.yaml  openapi_stocks.yaml  stocks.yaml  us_etf_openapi.json  us_stocks_openapi.json
specs_backup/specs_backup_20250622_035547/: america_openapi.json  coin_openapi.json  crypto_openapi.json  forex_openapi.json  futures_openapi.json  us_etf_openapi.json
src/: __init__.py  cli.py  config.py  constants.py  exceptions.py  models.py
src/analyzer/: scan_audit.py
src/api/: __init__.py  data_fetcher.py  data_manager.py  stock_data.py  tradingview_api.py
src/compare/: __init__.py  cache_diff.py
src/data/: collector.py
src/docs/: readme_generator.py
src/generator/: __init__.py  openapi_generator.py  yaml_generator.py
src/meta/: __init__.py  field_classifier.py  versioning.py
src/spec/: __init__.py  bundler.py  generator.py
src/tv_generator/: __main__.py  api.py  cli.py  config.py  core.py  main.py  simple_cli.py  sync.py  types.py  validation.py
src/utils/: __init__.py  custom_patterns.py  fs.py  infer.py  logging.py  pathlib_ext.py  payload.py  type_mapping.py
tests/: __init__.py  conftest.py  test_additional_api_cases.py  test_additional_coverage.py  test_api.py  test_basic_cli.py  test_cli.py  test_cli_additional.py  test_cli_bundle.py  test_cli_commands.py  test_cli_docs.py  test_collect.py  test_conditional_generate.py  test_config.py  test_core.py  test_data.py  test_data_fetcher.py  test_data_manager.py  test_descriptions_examples.py  test_diff.py  test_e2e.py  test_enhanced_generator.py  test_enum_fields.py  test_field_classifier.py  test_field_coverage.py  test_fs.py  test_improvements.py  test_infer.py  test_integration.py  test_metadata.py  test_metainfo_validation.py  test_models.py  test_openapi_generator.py  test_payload.py  test_ref_schemas.py  test_refresh.py  test_regression.py  test_scan_audit.py  test_size_limit.py  test_spec_version.py  (+7 more)
tests/assets/: coin_metainfo.json  coin_scan.json  prefinal.yaml
tests/specs/: us_stocks_openapi.json
tests/test_config/: custom_config.json
tests/test_data/: bonds_fields.txt  bonds_metainfo.json  bonds_openapi_fields.json  bonds_tickers.json  bonds_working_fields.txt  cfd_metainfo.json  cfd_openapi_fields.json  cfd_tickers.json  cfd_working_fields.txt  crypto_cex_fields.txt  crypto_cex_metainfo.json  crypto_cex_openapi_fields.json  crypto_coins_metainfo.json  crypto_coins_openapi_fields.json  crypto_coins_tickers.json  crypto_coins_working_fields.txt  crypto_dex_metainfo.json  crypto_dex_openapi_fields.json  crypto_dex_tickers.json  crypto_dex_working_fields.txt  forex_fields.txt  forex_metainfo.json  forex_openapi_fields.json  forex_tickers.json  forex_working_fields.txt  futures_metainfo.json  (+12 more)
tv_generator/: __init__.py  api.py  core.py  simple_cli.py
(+1451 files in other folders)
