[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "tv-generator"
version = "1.0.51"
requires-python = ">=3.10"
dependencies = [ "click==8.2.1", "requests==2.32.4", "pandas==2.3.0", "PyYAML==6.0.2", "openapi-spec-validator==0.7.2", "toml==0.10.2", "requests_cache==1.2.1", "pydantic==2.11.7",]

[project.scripts]
tvgen = "src.cli:cli"

[tool.setuptools]
packages = [ "src", "src.api", "src.generator", "src.utils", "src.spec", "src.data",]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.package-dir]
src = "src"
